# prototype-shift-generative

./: .gitignore  README.md  list.txt  main.py  pyproject.toml  run_experiments.sh
datasets/: categories.csv  list.txt
generate/: prototypes.py  usages.py
