[project]
name = "genexp"
version = "0.1.0"
description = "Pipeline for generating prototypes and example usages of target words"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
genexp = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generate"]
